<!--
  ~ Created by RadenMas on 22/4/2022.
  ~ Copyright (c) 2022.
  -->

<resources>
    <string name="app_name">Bioflok Nila</string>
    <string name="app_version">Versi %1$s</string>
    <string name="dev_name">Desta</string>
    <string name="home">Home</string>
    <string name="control">Control</string>
    <string name="chart">Chart</string>
    <string name="temp">Suhu</string>
    <string name="ph">pH</string>
    <string name="turbidity">Kekeruhan</string>
    <string name="feed">Pakan</string>
    <string name="last_update">Terakhir Update</string>
</resources>