<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by RadenMas on 22/4/2022.
  ~ Copyright (c) 2022.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.ChartFragment">

    <LinearLayout
        android:id="@+id/menuChart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTemp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_normal"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/temp"
            android:textColor="@color/primary_text" />

        <TextView
            android:id="@+id/tvPh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_normal"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/ph"
            android:textColor="@color/secondary_text" />

        <TextView
            android:id="@+id/tvTurbidity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_normal"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/turbidity"
            android:textColor="@color/secondary_text" />
    </LinearLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/menuChart"
        android:layout_marginTop="8dp" />

</RelativeLayout>