<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by RadenMas on 22/4/2022.
  ~ Copyright (c) 2022.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                style="@style/CardHome"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/tvTitleTemp"
                        style="@style/titleItemHome"
                        android:text="@string/temp" />

                    <ImageView
                        android:id="@+id/imgTemp"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentBottom="true"
                        android:src="@drawable/ic_temperature_2_color" />

                    <TextView
                        android:id="@+id/tvValueTemp"
                        style="@style/valueItemHome"
                        android:layout_toEndOf="@id/imgTemp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/CardHome"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/tvTitlePh"
                        style="@style/titleItemHome"
                        android:text="@string/ph" />

                    <ImageView
                        android:id="@+id/imgPh"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentBottom="true"
                        android:paddingHorizontal="4dp"
                        android:src="@drawable/ic_ph_meter_color" />

                    <TextView
                        android:id="@+id/tvValuePh"
                        style="@style/valueItemHome"
                        android:layout_toEndOf="@id/imgPh" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                style="@style/CardHome"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/tvTitleFeed"
                        style="@style/titleItemHome"
                        android:text="@string/feed" />

                    <ImageView
                        android:id="@+id/imgFeed"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentBottom="true"
                        android:src="@drawable/ic_fish_feed" />

                    <TextView
                        android:id="@+id/tvValueFeed"
                        style="@style/valueItemHome"
                        android:layout_toEndOf="@id/imgFeed" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/CardHome"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:visibility="invisible">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/tvTitleTurbidity"
                        style="@style/titleItemHome"
                        android:text="@string/turbidity" />

                    <ImageView
                        android:id="@+id/imgTurbidity"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentBottom="true"
                        android:paddingHorizontal="3dp"
                        android:src="@drawable/ic_water_color" />

                    <TextView
                        android:id="@+id/tvValueTurbidity"
                        style="@style/valueItemHome"
                        android:layout_toEndOf="@id/imgTurbidity" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </LinearLayout>

</ScrollView>