<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by RadenMas on 22/4/2022.
  ~ Copyright (c) 2022.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <RelativeLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTime"
            android:layout_marginTop="4dp"
            android:text="@string/dev_name"
            android:textColor="@color/primary_text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/dashboard"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_below="@id/appBar"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="14dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_fish_color" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:lines="2"
                    android:paddingHorizontal="16dp"
                    android:text="@string/app_name"
                    android:textColor="@color/secondary_text"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="20dp"
                android:background="@color/hint" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/imgCalender"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_calender_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="12dp"
                    android:layout_toEndOf="@id/imgCalender"
                    android:gravity="end"
                    android:lines="2"
                    android:text="@string/last_update"
                    android:textColor="@color/secondary_text"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imgClock"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="100dp"
                    android:src="@drawable/ic_clock_color" />

                <ImageView
                    android:id="@+id/imgDate"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_below="@+id/imgClock"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:padding="1dp"
                    android:src="@drawable/ic_date_color" />

                <TextView
                    android:id="@+id/tvClock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imgDate"
                    android:layout_alignTop="@+id/imgClock"
                    android:layout_alignBottom="@+id/imgClock"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@+id/imgClock"
                    android:text="12:34 WITA"
                    android:textColor="@color/primary_text" />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/imgDate"
                    android:layout_alignBottom="@+id/imgDate"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@+id/imgDate"
                    android:text="22 April 2022"
                    android:textColor="@color/primary_text" />

            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <fragment
        android:id="@+id/fragmentContainerView"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/navBottom"
        android:layout_below="@id/dashboard"
        app:defaultNavHost="true"
        app:navGraph="@navigation/my_nav" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        app:menu="@menu/nav_bottom" />

</RelativeLayout>